# raytrace-reverb

./: .gitignore  Cargo.toml  README.md
resources/models/: cube.mtl  untitled.blend
src/: main.rs  model.rs  obj.rs
src/glsl/: raytrace.comp
src/shader/: mod.rs  postprocess.rs  raytrace.rs
