[package]
name = "raytrace-reverb"
version = "0.1.0"
authors = ["Kazzix <kazzix14@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.13"
vulkano-shaders = "0.13"
image = "0.21"
num = "0.2"
fps_counter = "1.0"
rustfft = "3.0"
gnuplot = "0.0.32"
hound = "3.4"
rand = "0.7.2"